# zerest

./: Cargo.toml  README.md  concepts.txt
src/: app.rs  main.rs  message.rs  server.rs  tests.rs  widget.rs
src/app/: event.rs  mod.rs  ui.rs  word.rs
src/server/: mod.rs
src/server/handlers/: get.rs  post.rs
