[package]
name = "zerest"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "In the process of being developed by Rust as of January 2025..."
repository = "https://github.com/TwentyXX/zerest"
readme = "README.md"
documentation = "https://docs.rs/zerest"
keywords = ["mock-server", "zero-configuration", "rest-api", "zerest"]
categories = []

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
bpaf = "0.9.15"
chrono = { version = "0.4.39", features = ["serde"] }
color-eyre = "0.6.3"
crossterm = "0.28.1"
rand = "0.8.5"
ratatui = "0.29.0"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
anyhow = "1.0.95"
serde_json = "1.0.137"
tower-http = { version = "0.6.2", features = ["cors"] }
